--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-certifi==2016.9.26
-elasticsearch==5.0.1
 Flask==0.10.1
-httplib2==0.9.2
-itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+Werkzeug==0.11.11
+certifi==2016.9.26
+elasticsearch==5.0.1
+itsdangerous==0.24
 oauthlib==2.0.0
+requests==2.11.1
 requests-aws4auth==0.9
 requests-oauthlib==0.7.0
+six==1.10.0
 tweepy==3.5.0
-twilio==5.4.0
 urllib3==1.19
-Werkzeug==0.11.9
+wsgiref==0.1.2
